tests/baselines/reference/collisionExportsRequireAndAmbientEnum.errors.txt
collisionExportsRequireAndAmbientEnum_externalmodule.ts(9,16): error TS1294: This syntax is not allowed when 'erasableSyntaxOnly' is enabled.
collisionExportsRequireAndAmbientEnum_externalmodule.ts(19,8): error TS1294: This syntax is not allowed when 'erasableSyntaxOnly' is enabled.
collisionExportsRequireAndAmbientEnum_globalFile.ts(9,16): error TS1294: This syntax is not allowed when 'erasableSyntaxOnly' is enabled.
collisionExportsRequireAndAmbientEnum_globalFile.ts(19,8): error TS1294: This syntax is not allowed when 'erasableSyntaxOnly' is enabled.


==== collisionExportsRequireAndAmbientEnum_externalmodule.ts (2 errors) ====
    export declare enum require {
        _thisVal1,
        _thisVal2,
    }
    export declare enum exports {
        _thisVal1,
        _thisVal2,
    }
    declare module m1 {
                   ~~
!!! error TS1294: This syntax is not allowed when 'erasableSyntaxOnly' is enabled.
        enum require {
            _thisVal1,
            _thisVal2,
        }
        enum exports {
            _thisVal1,
            _thisVal2,
        }
    }
    module m2 {
           ~~
!!! error TS1294: This syntax is not allowed when 'erasableSyntaxOnly' is enabled.
        export declare enum require { 
            _thisVal1,
            _thisVal2,
        }
        export declare enum exports {
            _thisVal1,
            _thisVal2,
        }
    }
    
==== collisionExportsRequireAndAmbientEnum_globalFile.ts (2 errors) ====
    declare enum require {
        _thisVal1,
        _thisVal2,
    }
    declare enum exports {
        _thisVal1,
        _thisVal2,
    }
    declare module m3 {
                   ~~
!!! error TS1294: This syntax is not allowed when 'erasableSyntaxOnly' is enabled.
        enum require {
            _thisVal1,
            _thisVal2,
        }
        enum exports {
            _thisVal1,
            _thisVal2,
        }
    }
    module m4 {
           ~~
!!! error TS1294: This syntax is not allowed when 'erasableSyntaxOnly' is enabled.
        export declare enum require {
            _thisVal1,
            _thisVal2,
        }
        export declare enum exports {
            _thisVal1,
            _thisVal2,
        }
    }